--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -1,3 +1,5 @@
+name: Build & deployment
+
 push:
     branches:
       - main
@@ -15,6 +17,7 @@ jobs:
   build:
     name: build
     runs-on: ubuntu-latest
+    environment: development
     steps:
     - name: repo checkout
       uses: actions/checkout@v3
@@ -42,6 +45,7 @@ jobs:
     name: deployment dev
     needs: build
     runs-on: ubuntu-latest
+    environment: development
     steps:
       - name: repo checkout
         uses: actions/checkout@v3
