--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -2,10 +2,10 @@ name: Build & deployment
 
 push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 env:
