--- a/.github/workflows/cadvisor.yml
+++ b/.github/workflows/cadvisor.yml
@@ -1,12 +1,6 @@
 name: Deployment
 
-push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
-  workflow_dispatch:
+on: workflow_dispatch
 
 jobs:
   deployment:
