--- a/grafana/stack.yml
+++ b/grafana/stack.yml
@@ -14,6 +14,7 @@ services:
   grafana:
     image: grafana/grafana:9.3.1
     networks:
+      - default
       - nginx_default
       - exim_default
     environment:
