--- a/cadvisor/stack.yml
+++ b/cadvisor/stack.yml
@@ -8,6 +8,7 @@ services:
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:v0.46.0
     networks:
+      - default
       - nginx_default
     volumes:
       - /:/rootfs:ro
