--- a/prometheus/stack.yml
+++ b/prometheus/stack.yml
@@ -14,6 +14,7 @@ services:
   prometheus:
     image: ${IMAGE}
     networks:
+      - default
       - nginx_default
       - grafana_default
     volumes:
